--- a/libphonenumber/pubspec.yaml
+++ b/libphonenumber/pubspec.yaml
@@ -4,7 +4,10 @@ version: 0.0.1
 homepage: https://github.com/fonibo/libphonenumber
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"  
+  sdk: ">=2.7.0 <3.0.0"
+
+dependencies:
+  ffi: ^0.1.3
 
 dev_dependencies:
   test: any
